# mcav_autonomy

./: .dockerignore  .gitignore  .gitmodules  .~lock.straight.csv#  README.md  autonomy.rosinstall  can_setup.sh  frames_2023-07-27_21.44.23.gv  frames_2023-07-27_21.54.23.gv  frames_2023-07-27_22.00.28.gv  frames_2023-07-27_22.20.05.gv  login.sh  main_launch.sh  ros.repos  setup.cfg  setup.py  straight-offset.csv  test_control.py  without_obj_detection
.github/workflows/: docker-publish.yml  pylint.yml  ruff.yml
autonomy_launch/: camera_drivers_px2.sh  package.xml  ros1bridge.sh  setup.cfg  setup.py  start_cam_lidar.sh
autonomy_launch/launch/: autonomy.launch.py  carla.launch.py  lidar_object_detection_demo.launch.xml  map.launch.xml  stationary_demo.launch.xml  streetdrone.launch.py  streetdrone.launch.xml
autonomy_launch/rviz/: autonomy.rviz
autonomy_launch/scripts/: 1.sh  2.sh  3.sh  4.sh  autoware_ai.sh  bridge.yaml
data/waypoints/: generate_path_2.py  points.csv  right_then_left.csv  sine.csv  straight.csv  straight_then_sine.csv  transform_sine_waypoints.py
data_recording/: README.md  package.xml  setup.cfg  setup.py
data_recording/data_recording/: lidar_stamp_updater.py
data_recording/launch/: record.launch.py  record.launch.xml  record_lidar.launch.xml  record_sd_topics.launch.xml  update_lidar_timestamp.launch.xml
docker/: .tmux.conf  Dockerfile  Dockerfile.arm  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.jetson  Dockerfile.px2  README.md  aliases  jetson_run.sh  px2_run.sh  run.sh  tmux-start.sh
gazebo_sim/: package.xml  setup.cfg  setup.py
gazebo_sim/config/: gazebo_topics.yaml  gazebo_topics_testing.yaml  lidar_playground.sdf  lidar_playground.world
gazebo_sim/gazebo_sim/: sim_converter.py
gazebo_sim/launch/: gazebo_playground.launch.xml  load_test_world.launch.py  simulation.launch.xml
gazebo_sim/worlds/: lidar_friendly.sdf  lidar_friendly.world  lidar_playground.sdf  tracked_vehicle_wheeled.world
imu_calibration/: setup.cfg
imu_calibration/imu_calibration/: calibration.py
imu_calibration/launch/: imu_calibration.launch.xml
install/: local_setup.sh  setup.sh
line_strip_test/: package.xml  setup.cfg  setup.py
line_strip_test/launch/: line_strip_visualiser.launch.xml
line_strip_test/line_strip_test/: line_strip_publisher.py
localisation/: README.md  package.xml  setup.cfg  setup.py
localisation/launch/: localisation_launch.py
localisation/localisation/: pose_initialisation.py  rough_pose_guess.py  test_pcd_publisher.py
log/: latest_build
mcav_interfaces/: CMakeLists.txt  LICENSE  README.md  package.xml
mcav_interfaces/msg/: DetectedObject.msg  Waypoint.msg  WaypointArray.msg
mcav_sd_model/: README.md  package.xml  setup.cfg  setup.py
mcav_sd_model/launch/: mcav_sd_model.launch.py
mcav_sd_model/urdf/: sd_twizy.urdf.xacro
mcav_sd_sensing/: CMakeLists.txt  README.md  package.xml
mcav_sd_sensing/launch/: lifecam.launch.py  velodyne.launch.xml
project_tracker/: .gitignore  CMakeLists.txt  README.md  ROSINFO.md  carla_spawn.json  manual_control.py  package.xml  setup.cfg  setup.py  tracking_carla_setup.py
project_tracker/carla_integration/: generate_traffic.py  tracking.json  tracking.rviz  tracking_carla_setup.py
project_tracker/config/: combined.rviz  tracker.rviz
project_tracker/launch/: carla_tracking.py  lidar_object_detection_demo.launch.xml  tracking.launch.py  tracking.launch.xml  tracking_carla.launch.py  velodyne.launch.xml
project_tracker/project_tracker/: .config.py.swp  carla_rviz_transforms.py  cluster.py  config.py  image_classification.py  image_modifier.py  mock_image_pub.py  mock_pub.py  mock_sub.py  object_detection.py  semantic_segmentation.py  tracking.py  tracking_carla_setup.py  utils.py
project_tracker/src/: filter.cpp
pure_pursuit/: README.md  package.xml  run_rosbridge.sh  setup.py  town01_path.csv
pure_pursuit/launch/: carla.launch.xml  purepursuit.launch.py  purepursuit_sim.launch.py  purepursuit_simulation.launch.py  purepursuit_simulation_standalone.launch.py
pure_pursuit/misc/: carla_spawner_local_planner.py  town01_path2.csv
pure_pursuit/pure_pursuit/: .purepursuit.py.swp  .swp  carlaGlobalPathGenerator_node.py  carlaSpawner.py  carlaSpawnerWaypoint_node.py  carlaSpawner_node.py  carla_global_planner.py  carla_spawner.py  frames_2023-07-23_11.17.23.gv  ppcarla_node.py  ppsimple_node.py  purepursuit.py  twist_stamp_remover.py
sensors_launch/: CMakeLists.txt  README.md  neobotix_driver.py  package.xml  setup.cfg  setup.py
sensors_launch/config/: params.yaml
sensors_launch/imu_calibration/: package.xml  setup.py
sensors_launch/launch/: imu_calibration.launch.xml  lifecam.launch.py  neobotix_driver.launch.xml  neobotix_driver_launch.py  neobotrix_launch.py  ultrasonic.launch.py  velodyne.launch.xml
sensors_launch/sensors_launch/: .calibration.py.swo  acquire_sensors.py  imu_calibration.py  neobotix_driver.py
simulation/: README.md  package.xml  setup.py
simulation/example_waypoints/: sine.csv  straight.csv  wp_generator.py
simulation/launch/: simple_sim.launch.xml  twist_stamp_remover.launch.xml
simulation/simulation/: carla_spawn.py  generate_traffic.py  simple_sim.py  twist_stamp_remover.py
supervisor/: README.md  package.xml  supervisor.py
supervisor/launch/: supervisor.launch.py
supervisor/msg/: sensor_connection.msg
supervisor/supervisor/: minimal_publisher.py  supervisor.py
turtle_simulation/: package.xml  setup.cfg  setup.py
turtle_simulation/launch/: turtlesim_launch.launch.xml
turtle_simulation/turtle_simulation/: frame_broadcaster.py  pose_stamper.py  stamper.py
turtlesim/src/: turtle_frame.cpp
ultrasonic/: package.xml  setup.py
ultrasonic/install/: local_setup.sh  setup.sh
ultrasonic/log/: latest_build
velocity_planner/: README.md  package.xml  planner.rviz  setup.cfg  setup.py  town01_small_waypoints.csv
waypoints/: .90_deg_turn_right.csv.swp  45_deg_turn_right.csv  90_deg_turn_right.csv  generate_path.py  generate_turn_waypoints.py  right_then_left.csv  turn_test.csv  waypoints_left_10_50  waypoints_right_10_50
(+100 files in other folders)
