<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_tracker</name>
  <version>0.0.0</version>
  <description>Package to take LiDAR sensor data and inputs from Multi-Task Panoptic Perception model to create accurate pose and velocity estimates of an object over time in 3D space.</description>
  <maintainer email="bedw0004@student.monash.edu">bened-wards</maintainer>
  <license>The MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>transforms3d</exec_depend>
  <exec_depend>mcav_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
